Put vec:matvec on the device, over a matrix that stays resident
The first --gpu member outside linalg:, and the item .todo/475 filed off
the second profile: examples/llama2's decode loop is one GEMV per weight
matrix per token, and this file had declined the shape twice -- rightly
per CALL, since a matrix-by-vector product is one pass over its matrix
and a trip that carries the matrix loses to the --simd lane kernel until
~2^19 elements (measured: 33.7 us cold against 30 on the CPU at 768x288,
775 against 1467 at the 32000x288 head) -- and wrongly per TOKEN once the
matrix does not move: resident, the same call floors at ~9 us and wins
from 2^17 (384x384: 10.7 against 23.0 at f32, 9.9 against 45.5 at f64;
the head 169 against 1467, at the device's own ~225 GB/s). So the rule
that decides the upload is not a size: the first sight of a matrix
declines and leaves a no-buffer mark in CudaResidency (offeredBefore),
the second sight of the same span unwritten uploads it, every later one
is a hit, and a matrix the program rewrites between calls never pays the
cold trip it would lose. Threshold 2^17 (2^20 unpooled); Metal keeps no
resident copies and declines at every size.

The kernel (gemv_f32/f64, one warp per row, a shuffle tree) accumulates
in DOUBLE at both widths -- the scalar vec.lisp defun's rule, not the
lane kernel's -- because the product of two floats is exact in double
and only the order of a double sum then separates it from the defun:
bit-identical on 1024 of 1024 f32 rows, where a float accumulator lands
on 268 and the --simd lanes on 144; it costs ~2 us on a small resident
call and is what keeps llama2's story byte-identical under the flag.

Both backends gain the seam as a chain: the interpreter installs the
member from the VEC library's lazy-load hook (LinalgGpu.installVec, on
top of VecSimd's native; a fourth entry point, substituted in the web
image), and the JVM routes the vec:matvec call site to
JvmSimdCompiler.compileGpuMatvec -- device attempt over